--- a/install_minikube.yml
+++ b/install_minikube.yml
@@ -2,6 +2,7 @@
   become: yes
   vars:
     minikube_version: '1.10.1'
+    username: vagrant
   roles:
     - role: ericsysmin.docker.docker
     - role: robertdebock.bootstrap
