Reinicia a conexao para recarregar o novo grupo

--- a/install_minikube.yml
+++ b/install_minikube.yml
@@ -15,6 +15,9 @@
         name: "{{ username }}"
         groups: docker
 
+    - name: Reset ssh connection
+      meta: reset_connection
+
     - name: Inicia o minikube
       shell: minikube start --driver=docker
       become: no
